# tapl

./: .gitignore  AGENTS.md  README.ko.md  README.md
.codex/: config.toml
.codex/agents/: junior-worker.toml  senior-worker.toml  specialist-worker.toml
.github/workflows/: release.yml
.tapl/: config.toml
extension/: EXTENSION.md  README.md  package.json  replta-workflow-viewer-0.1.1-webview.vsix  replta-workflow-viewer-0.1.2-webview.vsix
extension/src/: extension.ts  vscode.d.ts
tapl/: pyproject.toml
tapl/.codex/: config.toml  hooks.json
tapl/.tapl/: config.toml
tapl/taplctl/: __init__.py  __main__.py  cli.py  config.py  context.py  db.py  embeddings.py  hooks.py  importer.py  install.py  prompt.py  searchd.py  validation.py
tapl/tests/: test_tapl.py
vscode-extension/: .vscodeignore  EXTENSION.md  LICENSE.md  README.md  package.json  package.nls.json  package.nls.ko.json  pnpm-lock.yaml  tailwind.config.cjs  tapl-workflow-viewer-0.2.0.vsix  tsconfig.json  tsconfig.webview.json  vite.config.ts
vscode-extension/src/: extension.ts  i18n.ts  vscode.d.ts
vscode-extension/src/webview/: App.tsx  i18n.tsx  index.html  styles.css  types.ts  vscodeApi.ts
vscode-extension/webview-dist/assets/: index.css  index.js
vscode-extension/webview-dist/src/webview/: index.html
