[project]
name = "taplctl"
version = "0.2.1"
description = "Codex workflow harness backed by repo-local SQLite state."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "sentence-transformers>=5.0.0",
  "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/qkdxorjs1002/REPLTA.MD"
Repository = "https://github.com/qkdxorjs1002/REPLTA.MD"

[project.scripts]
taplctl = "taplctl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["taplctl"]
force-include = { ".codex" = "taplctl/_templates/.codex", ".tapl/config.toml" = "taplctl/_templates/.tapl/config.toml" }

[tool.hatch.build.targets.sdist]
include = [
  "/taplctl",
  "/.codex",
  "/.tapl/config.toml",
  "/tests",
  "/pyproject.toml",
  "/uv.lock",
]
